test: 카테고리 테스트 로직 수정